--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +13,32 @@ a {
   text-decoration: none;
 }
 
+button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+}
+
 body {
   font-family: 'Josefin Sans', 'Roboto', sans-serif;
+}
+
+h1.topic {
+  display: inline;
+  font-size: 3.2rem;
+  font-weight: 500;
+  position: relative;
+  padding-bottom: 0.2rem;
+}
+
+h1.topic::before {
+  content: '';
+  width: 90%;
+  border-radius: 2px;
+  height: 3px;
+  background: #f24e1e;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
