--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -9,6 +9,8 @@
   justify-content: center;
   align-items: center;
   transition: all 0.85s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  opacity: 0;
+  z-index: -1;
 }
 
 #close {
