--- a/src/css/courses.css
+++ b/src/css/courses.css
@@ -14,6 +14,7 @@
 .course-card {
   border: 3px solid #000;
   width: 28%;
+  margin: 0.8rem;
 }
 
 .course-card img {
@@ -23,6 +24,7 @@
 
 .course-card .card-body {
   padding: 1rem;
+  padding-bottom: 0;
 }
 
 .course-card h2 {
@@ -39,7 +41,7 @@
   color: #f24e1e;
   font-size: 1.2rem;
   display: block;
-  margin: 1rem auto 0 auto;
+  margin: 1rem auto 2rem auto;
   font-weight: 700;
   padding: 0.4rem 0.6rem;
   position: relative;
@@ -93,9 +95,15 @@
   height: 100%;
 }
 
-.container.disable {
-  transition: all 0.6s ease;
-  width: 100%;
-  height: 0;
-  opacity: 0;
+.extra {
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  border: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .course-card {
+    width: 45%;
+  }
 }
