--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -60,3 +60,10 @@
 #contacts .tels a {
   margin: 0.2rem 0;
 }
+
+#contacts .location {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
