--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -10,8 +10,8 @@
   padding-top: 3rem;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: space-between;
+  align-items: stretch;
 }
 
 #contacts .links {
@@ -42,6 +42,10 @@
 
 #contacts .links a:nth-child(4) i {
   color: #a259ff;
+}
+
+#contacts .links a:nth-child(5) i {
+  color: #3b5998;
 }
 
 #contacts .tels {
